syntax = "proto3";
package fs;

option java_multiple_files = true;
option java_outer_classname = "FileSystemProto";

import "google/protobuf/struct.proto";

message MD5 {
  uint64 little = 1;
  uint64 upper = 2;
}

message File {
  string name = 1;
  bytes data = 2;
  uint64 creationTimestamp = 3;
  uint64 modificationTimestamp = 4;
  MD5 md5 = 5;
}

message Folder {
  string name = 1;
  repeated File files = 4;
  repeated Folder folders = 5;
}

message FileSystem {
  Folder root = 1;
}
